dealt with the opera bug that when use the utf-8 whitespace breaks the page

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,10 @@
 
 
 /* You can add global styles to this file, and also import other style files */
-
+html{
+    -webkit-text-size-adjust: 0%;
+    text-size-adjust:100%
+}
 
 
 @font-face {
